Addressed PR comments and removed the map
Signed-off-by: Owais Kazi <owaiskazi19@gmail.com>