@@ -13,6 +13,7 @@ import org.apache.logging.log4j.Logger;
 import org.opensearch.client.Client;
 import org.opensearch.cluster.service.ClusterService;
 import org.opensearch.common.unit.TimeValue;
+import org.opensearch.core.common.Strings;
 import org.opensearch.core.rest.RestStatus;
 import org.opensearch.flowframework.common.FlowFrameworkSettings;
 import org.opensearch.flowframework.exception.FlowFrameworkException;
@@ -22,16 +23,36 @@ import org.opensearch.flowframework.model.WorkflowValidator;
 import org.opensearch.ml.client.MachineLearningNodeClient;
 import org.opensearch.threadpool.ThreadPool;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
-import static java.util.concurrent.TimeUnit.SECONDS;
+import static org.opensearch.flowframework.common.CommonValue.ACTIONS_FIELD;
+import static org.opensearch.flowframework.common.CommonValue.CREDENTIAL_FIELD;
+import static org.opensearch.flowframework.common.CommonValue.DESCRIPTION_FIELD;
+import static org.opensearch.flowframework.common.CommonValue.EMBEDDING_DIMENSION;
+import static org.opensearch.flowframework.common.CommonValue.FRAMEWORK_TYPE;
+import static org.opensearch.flowframework.common.CommonValue.FUNCTION_NAME;
+import static org.opensearch.flowframework.common.CommonValue.MODEL_CONTENT_HASH_VALUE;
+import static org.opensearch.flowframework.common.CommonValue.MODEL_FORMAT;
+import static org.opensearch.flowframework.common.CommonValue.MODEL_GROUP_STATUS;
+import static org.opensearch.flowframework.common.CommonValue.MODEL_TYPE;
+import static org.opensearch.flowframework.common.CommonValue.NAME_FIELD;
+import static org.opensearch.flowframework.common.CommonValue.OPENSEARCH_ML;
+import static org.opensearch.flowframework.common.CommonValue.PARAMETERS_FIELD;
+import static org.opensearch.flowframework.common.CommonValue.PROTOCOL_FIELD;
+import static org.opensearch.flowframework.common.CommonValue.REGISTER_MODEL_STATUS;
+import static org.opensearch.flowframework.common.CommonValue.SUCCESS;
+import static org.opensearch.flowframework.common.CommonValue.TOOLS_FIELD;
+import static org.opensearch.flowframework.common.CommonValue.TYPE;
+import static org.opensearch.flowframework.common.CommonValue.URL;
+import static org.opensearch.flowframework.common.CommonValue.VERSION_FIELD;
+import static org.opensearch.flowframework.common.WorkflowResources.AGENT_ID;
+import static org.opensearch.flowframework.common.WorkflowResources.CONNECTOR_ID;
+import static org.opensearch.flowframework.common.WorkflowResources.MODEL_GROUP_ID;
+import static org.opensearch.flowframework.common.WorkflowResources.MODEL_ID;
 
 /**
  * Generates instances implementing {@link WorkflowStep}.
@@ -40,6 +61,10 @@ public class WorkflowStepFactory {
 
     private final Map<String, Supplier<WorkflowStep>> stepMap = new HashMap<>();
     private static final Logger logger = LogManager.getLogger(WorkflowStepFactory.class);
+    private static ThreadPool threadPool;
+    private static MachineLearningNodeClient mlClient;
+    private static FlowFrameworkIndicesHandler flowFrameworkIndicesHandler;
+    private static FlowFrameworkSettings flowFrameworkSettings;
 
     /**
      * Instantiate this class.
@@ -59,32 +84,14 @@ public class WorkflowStepFactory {
         FlowFrameworkIndicesHandler flowFrameworkIndicesHandler,
         FlowFrameworkSettings flowFrameworkSettings
     ) {
-        stepMap.put(NoOpStep.NAME, NoOpStep::new);
-        stepMap.put(
-            RegisterLocalCustomModelStep.NAME,
-            () -> new RegisterLocalCustomModelStep(threadPool, mlClient, flowFrameworkIndicesHandler, flowFrameworkSettings)
-        );
-        stepMap.put(
-            RegisterLocalSparseEncodingModelStep.NAME,
-            () -> new RegisterLocalSparseEncodingModelStep(threadPool, mlClient, flowFrameworkIndicesHandler, flowFrameworkSettings)
-        );
-        stepMap.put(
-            RegisterLocalPretrainedModelStep.NAME,
-            () -> new RegisterLocalPretrainedModelStep(threadPool, mlClient, flowFrameworkIndicesHandler, flowFrameworkSettings)
-        );
-        stepMap.put(RegisterRemoteModelStep.NAME, () -> new RegisterRemoteModelStep(mlClient, flowFrameworkIndicesHandler));
-        stepMap.put(DeleteModelStep.NAME, () -> new DeleteModelStep(mlClient));
-        stepMap.put(
-            DeployModelStep.NAME,
-            () -> new DeployModelStep(threadPool, mlClient, flowFrameworkIndicesHandler, flowFrameworkSettings)
-        );
-        stepMap.put(UndeployModelStep.NAME, () -> new UndeployModelStep(mlClient));
-        stepMap.put(CreateConnectorStep.NAME, () -> new CreateConnectorStep(mlClient, flowFrameworkIndicesHandler));
-        stepMap.put(DeleteConnectorStep.NAME, () -> new DeleteConnectorStep(mlClient));
-        stepMap.put(RegisterModelGroupStep.NAME, () -> new RegisterModelGroupStep(mlClient, flowFrameworkIndicesHandler));
-        stepMap.put(ToolStep.NAME, ToolStep::new);
-        stepMap.put(RegisterAgentStep.NAME, () -> new RegisterAgentStep(mlClient, flowFrameworkIndicesHandler));
-        stepMap.put(DeleteAgentStep.NAME, () -> new DeleteAgentStep(mlClient));
+        this.threadPool = threadPool;
+        this.mlClient = mlClient;
+        this.flowFrameworkIndicesHandler = flowFrameworkIndicesHandler;
+        this.flowFrameworkSettings = flowFrameworkSettings;
+        // Initialize the WorkflowSteps enum inside the constructor
+        for (WorkflowSteps workflowStep : WorkflowSteps.values()) {
+            stepMap.put(workflowStep.getWorkflowStepName(), workflowStep.step());
+        }
     }
 
     /**
@@ -93,135 +100,219 @@ public class WorkflowStepFactory {
 
     public enum WorkflowSteps {
 
-        NOOP("noop", Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), null),
+        /** Noop Step */
+        NOOP("noop", Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), null, NoOpStep::new),
 
+        /** Create Connector Step */
         CREATE_CONNECTOR(
-            "create_connector",
-            Arrays.asList("name", "description", "version", "protocol", "parameters", "credential", "actions"),
-            Arrays.asList("connector_id"),
-            Arrays.asList("opensearch-ml"),
-            new TimeValue(60, SECONDS)
+            CreateConnectorStep.NAME,
+            List.of(NAME_FIELD, DESCRIPTION_FIELD, VERSION_FIELD, PROTOCOL_FIELD, PARAMETERS_FIELD, CREDENTIAL_FIELD, ACTIONS_FIELD),
+            List.of(CONNECTOR_ID),
+            List.of(OPENSEARCH_ML),
+            TimeValue.timeValueSeconds(60),
+            () -> new CreateConnectorStep(mlClient, flowFrameworkIndicesHandler)
         ),
 
+        /** Register Local Custom Model Step */
         REGISTER_LOCAL_CUSTOM_MODEL(
-            "register_local_custom_model",
-            Arrays.asList(
-                "name",
-                "version",
-                "model_format",
-                "function_name",
-                "model_content_hash_value",
-                "url",
-                "model_type",
-                "embedding_dimension",
-                "framework_type"
+            RegisterLocalCustomModelStep.NAME,
+            List.of(
+                NAME_FIELD,
+                VERSION_FIELD,
+                MODEL_FORMAT,
+                FUNCTION_NAME,
+                MODEL_CONTENT_HASH_VALUE,
+                URL,
+                MODEL_TYPE,
+                EMBEDDING_DIMENSION,
+                FRAMEWORK_TYPE
             ),
-            Arrays.asList("model_id", "register_model_status"),
-            Arrays.asList("opensearch-ml"),
-            new TimeValue(60, SECONDS)
+            List.of(MODEL_ID, REGISTER_MODEL_STATUS),
+            List.of(OPENSEARCH_ML),
+            TimeValue.timeValueSeconds(60),
+            () -> new RegisterLocalCustomModelStep(threadPool, mlClient, flowFrameworkIndicesHandler, flowFrameworkSettings)
         ),
 
+        /** Register Local Sparse Encoding Model Step */
         REGISTER_LOCAL_SPARSE_ENCODING_MODEL(
-            "register_local_sparse_encoding_model",
-            Arrays.asList("name", "version", "model_format", "function_name", "model_content_hash_value", "url"),
-            Arrays.asList("model_id", "register_model_status"),
-            Arrays.asList("opensearch-ml"),
-            new TimeValue(60, SECONDS)
+            RegisterLocalSparseEncodingModelStep.NAME,
+            List.of(NAME_FIELD, VERSION_FIELD, MODEL_FORMAT, FUNCTION_NAME, MODEL_CONTENT_HASH_VALUE, URL),
+            List.of(MODEL_ID, REGISTER_MODEL_STATUS),
+            List.of(OPENSEARCH_ML),
+            TimeValue.timeValueSeconds(60),
+            () -> new RegisterLocalSparseEncodingModelStep(threadPool, mlClient, flowFrameworkIndicesHandler, flowFrameworkSettings)
         ),
+
+        /** Register Local Pretrained Model Step */
         REGISTER_LOCAL_PRETRAINED_MODEL(
-            "register_local_pretrained_model",
-            Arrays.asList("name", "version", "model_format"),
-            Arrays.asList("model_id", "register_model_status"),
-            Arrays.asList("opensearch-ml"),
-            new TimeValue(60, SECONDS)
+            RegisterLocalPretrainedModelStep.NAME,
+            List.of(NAME_FIELD, VERSION_FIELD, MODEL_FORMAT),
+            List.of(MODEL_ID, REGISTER_MODEL_STATUS),
+            List.of(OPENSEARCH_ML),
+            TimeValue.timeValueSeconds(60),
+            () -> new RegisterLocalPretrainedModelStep(threadPool, mlClient, flowFrameworkIndicesHandler, flowFrameworkSettings)
         ),
 
+        /** Register Remote Model Step */
         REGISTER_REMOTE_MODEL(
-            "register_remote_model",
-            Arrays.asList("name", "connector_id"),
-            Arrays.asList("model_id", "register_model_status"),
-            Arrays.asList("opensearch-ml"),
-            null
+            RegisterRemoteModelStep.NAME,
+            List.of(NAME_FIELD, CONNECTOR_ID),
+            List.of(MODEL_ID, REGISTER_MODEL_STATUS),
+            List.of(OPENSEARCH_ML),
+            null,
+            () -> new RegisterRemoteModelStep(mlClient, flowFrameworkIndicesHandler)
         ),
 
+        /** Register Model Group Step */
         REGISTER_MODEL_GROUP(
-            "register_model_group",
-            Arrays.asList("name"),
-            Arrays.asList("model_group_id", "model_group_status"),
-            Arrays.asList("opensearch-ml"),
-            null
+            RegisterModelGroupStep.NAME,
+            List.of(NAME_FIELD),
+            List.of(MODEL_GROUP_ID, MODEL_GROUP_STATUS),
+            List.of(OPENSEARCH_ML),
+            null,
+            () -> new RegisterModelGroupStep(mlClient, flowFrameworkIndicesHandler)
         ),
 
+        /** Deploy Model Step */
         DEPLOY_MODEL(
-            "deploy_model",
-            Arrays.asList("model_id"),
-            Arrays.asList("deploy_model_status"),
-            Arrays.asList("opensearch-ml"),
-            new TimeValue(15, SECONDS)
+            DeployModelStep.NAME,
+            List.of(MODEL_ID),
+            List.of(MODEL_ID),
+            List.of(OPENSEARCH_ML),
+            TimeValue.timeValueSeconds(15),
+            () -> new DeployModelStep(threadPool, mlClient, flowFrameworkIndicesHandler, flowFrameworkSettings)
         ),
 
-        UNDEPLOY_MODEL("undeploy_model", Arrays.asList("model_id"), Arrays.asList("success"), Arrays.asList("opensearch-ml"), null),
+        /** Undeploy Model Step */
+        UNDEPLOY_MODEL(
+            UndeployModelStep.NAME,
+            List.of(MODEL_ID),
+            List.of(SUCCESS),
+            List.of(OPENSEARCH_ML),
+            null,
+            () -> new UndeployModelStep(mlClient)
+        ),
 
-        DELETE_MODEL("delete_model", Arrays.asList("model_id"), Arrays.asList("model_id"), Arrays.asList("opensearch-ml"), null),
+        /** Delete Model Step */
+        DELETE_MODEL(
+            DeleteModelStep.NAME,
+            List.of(MODEL_ID),
+            List.of(MODEL_ID),
+            List.of(OPENSEARCH_ML),
+            null,
+            () -> new DeleteModelStep(mlClient)
+        ),
 
+        /** Delete Connector Step */
         DELETE_CONNECTOR(
-            "delete_connector",
-            Arrays.asList("connector_id"),
-            Arrays.asList("connector_id"),
-            Arrays.asList("opensearch-ml"),
-            null
+            DeleteConnectorStep.NAME,
+            List.of(CONNECTOR_ID),
+            List.of(CONNECTOR_ID),
+            List.of(OPENSEARCH_ML),
+            null,
+            () -> new DeleteConnectorStep(mlClient)
         ),
 
-        REGISTER_AGENT("register_agent", Arrays.asList("name", "type"), Arrays.asList("agent_id"), Arrays.asList("opensearch-ml"), null),
+        /** Register Agent Step */
+        REGISTER_AGENT(
+            RegisterAgentStep.NAME,
+            List.of(NAME_FIELD, TYPE),
+            List.of(AGENT_ID),
+            List.of(OPENSEARCH_ML),
+            null,
+            () -> new RegisterAgentStep(mlClient, flowFrameworkIndicesHandler)
+        ),
 
-        DELETE_AGENT("delete_agent", Arrays.asList("agent_id"), Arrays.asList("agent_id"), Arrays.asList("opensearch-ml"), null),
+        /** Delete Agent Step */
+        DELETE_AGENT(
+            DeleteAgentStep.NAME,
+            List.of(AGENT_ID),
+            List.of(AGENT_ID),
+            List.of(OPENSEARCH_ML),
+            null,
+            () -> new DeleteAgentStep(mlClient)
+        ),
 
-        CREATE_TOOL("create_tool", Arrays.asList("type"), Arrays.asList("tools"), Arrays.asList("opensearch-ml"), null);
+        /** Create Tool Step */
+        CREATE_TOOL(ToolStep.NAME, List.of(TYPE), List.of(TOOLS_FIELD), List.of(OPENSEARCH_ML), null, ToolStep::new);
 
-        private final String workflowStep;
+        private final String workflowStepName;
         private final List<String> inputs;
         private final List<String> outputs;
         private final List<String> requiredPlugins;
         private final TimeValue timeout;
+        private final Supplier<WorkflowStep> workflowStep;
 
-        private static final List<String> allWorkflowSteps = Stream.of(values())
-            .map(WorkflowSteps::getWorkflowStep)
-            .collect(Collectors.toList());
-
-        WorkflowSteps(String workflowStep, List<String> inputs, List<String> outputs, List<String> requiredPlugins, TimeValue timeout) {
-            this.workflowStep = workflowStep;
+        WorkflowSteps(
+            String workflowStepName,
+            List<String> inputs,
+            List<String> outputs,
+            List<String> requiredPlugins,
+            TimeValue timeout,
+            Supplier<WorkflowStep> workflowStep
+        ) {
+            this.workflowStepName = workflowStepName;
             this.inputs = List.copyOf(inputs);
             this.outputs = List.copyOf(outputs);
             this.requiredPlugins = requiredPlugins;
             this.timeout = timeout;
+            this.workflowStep = workflowStep;
         }
 
         /**
          * Returns the workflowStep for the given enum Constant
          * @return the workflowStep of this data.
          */
-        public String getWorkflowStep() {
-            return workflowStep;
+        public String getWorkflowStepName() {
+            return workflowStepName;
         }
 
-        public List<String> getInputs() {
+        /**
+         * Get the required inputs
+         * @return the inputs
+         */
+        public List<String> inputs() {
             return inputs;
         }
 
-        public List<String> getOutputs() {
+        /**
+         * Get the required outputs
+         * @return the outputs
+         */
+        public List<String> outputs() {
             return outputs;
         }
 
-        public List<String> getRequiredPlugins() {
+        /**
+         * Get the required plugins
+         * @return the required plugins
+         */
+        public List<String> requiredPlugins() {
             return requiredPlugins;
         }
 
-        public TimeValue getTimeout() {
+        /**
+         * Get the timeout
+         * @return the timeout
+         */
+        public TimeValue timeout() {
             return timeout;
         }
 
+        /**
+         * Get the step
+         * @return the step
+         */
+        public Supplier<WorkflowStep> step() {
+            return workflowStep;
+        }
+
+        /**
+         * Get the workflow step validator object
+         * @return the WorkflowStepValidator
+         */
         public WorkflowStepValidator getWorkflowStepValidator() {
-            return new WorkflowStepValidator(workflowStep, inputs, outputs, requiredPlugins, timeout);
+            return new WorkflowStepValidator(workflowStepName, inputs, outputs, requiredPlugins, timeout);
         };
 
         /**
@@ -231,15 +322,16 @@ public class WorkflowStepFactory {
          * @throws FlowFrameworkException if workflow step doesn't exist in enum
          */
         public static TimeValue getTimeoutByWorkflowType(String workflowStep) throws FlowFrameworkException {
-            if (workflowStep != null && !workflowStep.isEmpty()) {
+            if (!Strings.isNullOrEmpty(workflowStep)) {
                 for (WorkflowSteps mapping : values()) {
-                    if (workflowStep.equals(mapping.getWorkflowStep())) {
-                        return mapping.getTimeout();
+                    if (workflowStep.equals(mapping.getWorkflowStepName())) {
+                        return mapping.timeout();
                     }
                 }
             }
-            logger.error("Unable to find workflow timeout for step: {}", workflowStep);
-            throw new FlowFrameworkException("Unable to find workflow timeout for step: " + workflowStep, RestStatus.BAD_REQUEST);
+            String errorMessage = "Unable to find workflow timeout for step: " + workflowStep;
+            logger.error(errorMessage);
+            throw new FlowFrameworkException(errorMessage, RestStatus.BAD_REQUEST);
         }
 
         /**
@@ -249,15 +341,16 @@ public class WorkflowStepFactory {
          * @throws FlowFrameworkException if workflow step doesn't exist in enum
          */
         public static List<String> getRequiredPluginsByWorkflowType(String workflowStep) throws FlowFrameworkException {
-            if (workflowStep != null && !workflowStep.isEmpty()) {
+            if (!Strings.isNullOrEmpty(workflowStep)) {
                 for (WorkflowSteps mapping : values()) {
-                    if (workflowStep.equals(mapping.getWorkflowStep())) {
-                        return mapping.getRequiredPlugins();
+                    if (workflowStep.equals(mapping.getWorkflowStepName())) {
+                        return mapping.requiredPlugins();
                     }
                 }
             }
-            logger.error("Unable to find workflow required plugins for step: {}", workflowStep);
-            throw new FlowFrameworkException("Unable to find workflow required plugins for step: " + workflowStep, RestStatus.BAD_REQUEST);
+            String errorMessage = "Unable to find workflow required plugins for step: " + workflowStep;
+            logger.error(errorMessage);
+            throw new FlowFrameworkException(errorMessage, RestStatus.BAD_REQUEST);
         }
 
         /**
@@ -267,15 +360,16 @@ public class WorkflowStepFactory {
          * @throws FlowFrameworkException if workflow step doesn't exist in enum
          */
         public static List<String> getOutputByWorkflowType(String workflowStep) throws FlowFrameworkException {
-            if (workflowStep != null && !workflowStep.isEmpty()) {
+            if (!Strings.isNullOrEmpty(workflowStep)) {
                 for (WorkflowSteps mapping : values()) {
-                    if (workflowStep.equals(mapping.getWorkflowStep())) {
-                        return mapping.getOutputs();
+                    if (workflowStep.equals(mapping.getWorkflowStepName())) {
+                        return mapping.outputs();
                     }
                 }
             }
-            logger.error("Unable to find workflow output for step: {}", workflowStep);
-            throw new FlowFrameworkException("Unable to find workflow output for step: " + workflowStep, RestStatus.BAD_REQUEST);
+            String errorMessage = "Unable to find workflow output for step " + workflowStep;
+            logger.error(errorMessage);
+            throw new FlowFrameworkException(errorMessage, RestStatus.BAD_REQUEST);
         }
 
         /**
@@ -285,15 +379,16 @@ public class WorkflowStepFactory {
          * @throws FlowFrameworkException if workflow step doesn't exist in enum
          */
         public static List<String> getInputByWorkflowType(String workflowStep) throws FlowFrameworkException {
-            if (workflowStep != null && !workflowStep.isEmpty()) {
+            if (!Strings.isNullOrEmpty(workflowStep)) {
                 for (WorkflowSteps mapping : values()) {
-                    if (workflowStep.equals(mapping.getWorkflowStep())) {
-                        return mapping.getInputs();
+                    if (workflowStep.equals(mapping.getWorkflowStepName())) {
+                        return mapping.inputs();
                     }
                 }
             }
-            logger.error("Unable to find workflow input for step: {}", workflowStep);
-            throw new FlowFrameworkException("Unable to find workflow input for step: " + workflowStep, RestStatus.BAD_REQUEST);
+            String errorMessage = "Unable to find workflow input for step: " + workflowStep;
+            logger.error(errorMessage);
+            throw new FlowFrameworkException(errorMessage, RestStatus.BAD_REQUEST);
         }
 
     }
@@ -306,7 +401,7 @@ public class WorkflowStepFactory {
         Map<String, WorkflowStepValidator> workflowStepValidators = new HashMap<>();
 
         for (WorkflowSteps mapping : WorkflowSteps.values()) {
-            workflowStepValidators.put(mapping.getWorkflowStep(), mapping.getWorkflowStepValidator());
+            workflowStepValidators.put(mapping.getWorkflowStepName(), mapping.getWorkflowStepValidator());
         }
 
         return new WorkflowValidator(workflowStepValidators);
